--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.6.1",
     "react-addons-css-transition-group": "^15.6.2",
