--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^16.6.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
+    "react-albus": "^2.0.0",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-slick": "^0.23.2",
     "react-transition-group": "^1.2.1",
     "reactstrap": "^6.5.0"
   },
