--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.22.2",
     "react": "^16.6.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
